--- a/package.json
+++ b/package.json
@@ -4,7 +4,25 @@
   "description": "Common configuration for eslint used in Pronos",
   "main": "index.js",
   "repository": "github.com/pronos-eu/eslint-config-pronos.git",
-  "author": "Pronos Sp. z o.o.",
-  "license": "Unlicense",
-  "private": true
+  "author": "Pronos Sp. z o.o. (http://pronos.eu)",
+  "license": "UNLICENSED",
+  "private": true,
+  "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
+  },
+  "devDependencies": {
+    "eslint": "6.6.0"
+  },
+  "dependencies": {
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-react-hooks": "2.3.0",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "@typescript-eslint/eslint-plugin": "2.8.0"
+  },
+  "peerDependencies": {
+    "eslint": "6.6.0"
+  }
 }
