--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "lint:fix": "eslint --fix ."
   },
   "devDependencies": {
-    "eslint": "6.6.0"
-  },
-  "dependencies": {
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-react": "7.16.0",
-    "eslint-plugin-react-hooks": "2.3.0",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "@typescript-eslint/eslint-plugin": "2.8.0"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-plugin-import": "^2.23.4"
   },
   "peerDependencies": {
-    "eslint": "6.6.0"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "2.8.0"
   }
 }
