--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "lint:fix": "eslint --fix ."
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-plugin-import": "^2.23.4"
+    "eslint": "^6.8.0"
   },
   "peerDependencies": {
+    "eslint": "^6.8.0"
+  },
+  "dependencies": {
     "@typescript-eslint/eslint-plugin": "2.8.0",
-    "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "6.2.3",
