--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "eslint": "^6.8.0"
   },
   "peerDependencies": {
-    "eslint": "^6.8.0"
+    "@typescript-eslint/eslint-plugin": "2.8.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "2.8.0",
