--- a/package.json
+++ b/package.json
@@ -14,20 +14,29 @@
   "devDependencies": {
     "eslint": "^6.8.0"
   },
+  "dependencies": {
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-plugin-import": "^2.23.4"
+  },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "2.8.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0"
   },
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "2.8.0",
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+  "peerDependenciesMeta": {
+    "@typescript-eslint/eslint-plugin": {
+      "optional": true
+    },
+    "eslint-plugin-jsx-a11y": {
+      "optional": true
+    },
+    "eslint-plugin-react": {
+      "optional": true
+    },
+    "eslint-plugin-react-hooks": {
+      "optional": true
+    }
   }
 }
