MAC-48 Split eslint-plugin-import related items to separate entrypoint for more granular choice of rules applied

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 // Use the defined config to verify rule definitions
 {
     "extends": [
-        "./index" 
+        "./index" ,
+        "./import"
     ]
 }
