--- a/package.json
+++ b/package.json
@@ -12,21 +12,25 @@
     "lint:fix": "eslint --fix ."
   },
   "devDependencies": {
-    "eslint": "^7.1.0"
+    "eslint": "^7.1.0",
+    "eslint-plugin-import": "^2.26.0"
   },
   "dependencies": {
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-config-airbnb-base": "14.2.1"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "eslint": "^7.1.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0"
   },
   "peerDependenciesMeta": {
     "@typescript-eslint/eslint-plugin": {
+      "optional": true
+    },
+    "eslint-plugin-import": {
       "optional": true
     },
     "eslint-plugin-jsx-a11y": {
